# web_hw8

./: .env  db.py  docker-compose.yaml  get_records.py  main.py  models.py  pyproject.toml  seed.py
part2/: consumer.py  docker-compose.yaml  models.py  producer.py
