[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["marinasemak <marina.semak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.29.1"
python-dotenv = "^1.0.1"
black = "^24.10.0"
pika = "^1.3.2"
faker = "^30.6.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
redis = "^5.1.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
